# libvtorrent

./: CMakeLists.txt  LICENSE  README.md
include/: v_error.h  v_hexstring.h  vtorrent.h
src/: v_hexstring.c  vtorrent.c
test/: main.c  v_test_hexstring.c
